Socket Server started

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,1 +1,16 @@
-Hello World
+<html>
+  <head>
+    <title>
+      Home
+    </title>
+  </head>
+  <body>
+    Hello worldasdifjo
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+     var socket = io();
+    </script>
+  </body>
+</html>
+
+
