added exit button

--- a/src/views/facts/index.html
+++ b/src/views/facts/index.html
@@ -35,17 +35,17 @@
 
                 <div class="form-label-group">
                 <input type="text" id="fact1" class="form-control" placeholder="Fact 1" required>
-                <label for="fact1">Fact 1</label>
+                <label for="fact1"></label>
                 </div>
                 
                 <div class="form-label-group">
                 <input type="text" id="fact2" class="form-control" placeholder="Fact 2" required>
-                <label for="fact2">Fact 2</label>
+                <label for="fact2"></label>
                 </div>
                 
                 <div class="form-label-group">
                 <input type="text" id="fact3" class="form-control" placeholder="Fact 3" required>
-                <label for="fact3">Fact 3</label>
+                <label for="fact3"></label>
                 </div>
                 
                 <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">enter game</button>
@@ -58,6 +58,12 @@
         </div>
     </div>
     </div>
+
+    <footer >
+      <div class="container text-center">
+        <a type="button" class="btn btn-danger" href = "/">Exit</a>
+      </div>
+    </footer>
 
   <!-- code we made -->
 
