--- a/src/views/lobby/index.html
+++ b/src/views/lobby/index.html
@@ -25,7 +25,12 @@
 
 <body>
 
-    
+
+  
+  <script src = "../../socket.io/socket.io.js"></script>
+  <script src = "../../js/libs/jqueryLibrary.js"></script>
+  <script src = "../../js/libs/deparam.js"></script>
+  <script src = "../../js/hostGame.js"></script>
 
   <!-- code we made -->
 
