--- a/src/views/landing/index.html
+++ b/src/views/landing/index.html
@@ -25,31 +25,6 @@
 
 <body id="page-top">
 
-  <!-- Navigation -->
-  <nav id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-      <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#page-top">Home</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#about">About</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Services</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contact</a>
-      </li>
-    </ul>
-  </nav>
-
-
   <!-- Header -->
   <header class="masthead d-inline-flex justify-content-center">
     
@@ -61,18 +36,21 @@
         <div class="d-flex justify-content-center" >username</div>
         <input type="text" class="form-control username" id="username" placeholder="e.g Rafael Reif" name="username">
         
-        <button type="submit" class="btn btn-primary btn-customized justify-content-center">create game</button>
+        <button onclick="createGame()" type="submit" class="btn btn-primary btn-customized justify-content-center" id="createGame">create game</button>
 
         <div class="d-flex justify-content-center" >game id</div>
-        <input type="password" class="form-control username" id="password" placeholder="XXXX" name="password">
+        <input type="text" class="form-control username" id="gameId" placeholder="XXXX" name="text">
         
-        <button onclick="myFunction(this)" type="submit" class="btn btn-primary btn-customized">join game</button>
+        <!-- add href later-->
+        <button onclick="joinGame()" type="submit" class="btn btn-primary btn-customized" id="joinGame">join game</button>
         
     </div>
   </header>
 
+  <script src="https://cdn.socket.io/socket.io-2.3.0.js"></script>
+
   <!-- me and peyton's javascript-->
-  <script scr='/landing.js'></script>
+  <script src='./js/landing.js'></script>
 
   <!-- Scroll to Top Button-->
   <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
