--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -373,3 +373,17 @@ a:hover, a:focus, a:active {
 .text-secondary {
   color: #ecb807 !important;
 }
+
+.loader {
+  display: block;
+  height: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 8px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 8px solid #3A3B3A;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 1.5s linear infinite; /* Safari */
+  animation: spin 1.5s linear infinite;
+}
