--- a/src/views/lobby/index.html
+++ b/src/views/lobby/index.html
@@ -25,7 +25,18 @@
 
 <body>
 
+  <div class="container d-flex justify-content-center">
+    <div class="d-flex flex-column align-items-center">
+      <div><h1>Hello World</h1></div>
+      <div><h2>Hello World</h2></div>
+    </div>
+  </div>
 
+  <footer >
+    <div class="container text-center">
+      <a type="button" class="btn btn-danger" href = "/">Exit</a>
+    </div>
+  </footer>
   
   <script src = "../../socket.io/socket.io.js"></script>
   <script src = "../../js/libs/jqueryLibrary.js"></script>
