--- a/src/views/facts/index.html
+++ b/src/views/facts/index.html
@@ -31,7 +31,7 @@
     <div class="container">
     <div class="row">
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card my-5 align-items-center" style="opacity: 0.1;">
+        <div class="card my-5 align-items-center" style="background-color: transparent;">
             <div class="card-body">
             <h5 class="card-title text-center">enter your facts!</h5>
             <form>
@@ -56,6 +56,8 @@
                 </div>
                 
             </form>
+
+
             </div>
         </div>
         </div>
