--- a/src/views/lobby/index.html
+++ b/src/views/lobby/index.html
@@ -32,7 +32,7 @@
             <h2>game pin goes here</h2>
         </div>
 
-        <div class="card my-3" style="width: 100%; opacity: 0.2;">
+        <div class="card my-3" style="width: 100%; background-color: transparent;">
           <div class="card-title my-2 text-center">
             <h5>players go below this</h5>
           </div>
