--- a/src/views/lobby/index.html
+++ b/src/views/lobby/index.html
@@ -29,7 +29,7 @@
 
     <div class="container d-flex flex-column align-items-center">
         <div>
-            <h2>game pin goes here</h2>
+            <h2 id='game-pin'>game pin goes here</h2>
         </div>
 
         <div class="card my-3" style="width: 100%; background-color: transparent;">
