--- a/src/views/lobby/index.html
+++ b/src/views/lobby/index.html
@@ -67,4 +67,5 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/stylish-portfolio.min.js"></script>
+    <script src="js/lobby.js"></script>
 </body>
