--- a/src/views/facts/index.html
+++ b/src/views/facts/index.html
@@ -68,6 +68,7 @@
     </footer>
 
   <!-- code we made -->
+  <script src='./js/api.js'></script>
   <script src='./js/facts.js'></script>
 
   <!-- Bootstrap core JavaScript -->
