podium html and js

--- a/src/views/podium/index.html
+++ b/src/views/podium/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>RANKINGS</title>
+  <title>PODIUM</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
           <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
           <div class="card card-signin my-5">
               <div class="card-body">
-              <h5 class="card-title text-center">Leaderboard!</h5>
+              <h5 class="card-title text-center">Podium</h5>
               <table class="table">
                   <thead>
                     <tr>
@@ -53,9 +53,10 @@
 
 
   <!-- code we made -->
-  <script src='./js/rankings.js'></script>
+  <script src='./js/api.js'></script>
+  <script src='./js/podium.js'></script>
   <script>
-    getRankings();
+    getPodium();
   </script>
 
   <!-- Bootstrap core JavaScript -->
