rerouting some stuff

--- a/src/views/landing/index.html
+++ b/src/views/landing/index.html
@@ -59,7 +59,7 @@
 
   <!-- our own javascript-->
   <script src='./js/landing.js'></script>
-
+  <script src="./js/api.js"></script>
 
 
   <!-- Bootstrap core JavaScript -->
