--- a/src/views/lobby/index.html
+++ b/src/views/lobby/index.html
@@ -45,7 +45,7 @@
     </div>
     <!-- button for handling starting the game -->
     <div>
-      <button onclick="" type="submit" class="btn btn-lg btn-primary btn-block">start game</button>
+      <button onclick="startGame()" type="submit" class="btn btn-lg btn-primary btn-block">start game</button>
     </div>
 
 
