--- a/src/views/answer/index.html
+++ b/src/views/answer/index.html
@@ -19,7 +19,7 @@
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="css/stylish-portfolio.min.css" rel="stylesheet">
+  <link href="./css/stylish-portfolio.min.css" rel="stylesheet">
 
 </head>
 
@@ -28,39 +28,30 @@
   <!-- Header -->
   <header class="masthead d-flex flex-column align-items-center">
     
-    <div>
-      <h1>whomst</h1>
+    <div class="card" style="width: 50%;">
+      <h4 class="text-center" id="factDiv"></h4>
     </div>
-    
-    <div class="container">
-      <div class="d-flex flex-row justify-content-around align-items-center">
-        
-        <div class="d-flex flex-column justify-content-center align-items-center">
-          <div class="form-label-group justify-content-center align-items-center">
-            <input type="text" class="form-control my-3" id="gameId" placeholder="GAME PIN" name="gameId" style="text-align: center;" required>
-            <input type="text" class="form-control username my-3" id="joinGameUsername" placeholder="USERNAME" name="username" style="text-align: center;" required>
-            <button onclick="joinGame()" type="submit" value="joinGame" class="btn btn-primary btn-block btn-lg my-3">join game</button>
-          </div>
-        </div>
 
-        <div>
-          <div class="form-label-group justify-content-center">
-            <input type="text" class="form-control username" id="createGameUsername" placeholder="USERNAME" name="username" style="text-align: center;" required>
-            <button onclick="createGame()" type="submit" class="btn btn-lg btn-primary btn-block my-3">create game</button>
-          </div>
-        </div>
-
+    <div class="container my-5">
+      <div id = "answerDiv" class="row justify-content-around" style="flex: 100px 200px;">
       </div>
+    </div>
+
+    <div class="card-header" id="roundDiv">
     </div>
 
   </header>
 
-  <script src="https://cdn.socket.io/socket.io-2.3.0.js"></script>
+
 
   <!-- our own javascript-->
-  <script src='./js/landing.js'></script>
+  <script src='./js/answer.js'></script>
+  <script src="./js/api.js"></script>
 
-
+  <!-- invoke API call to get display answers-->
+  <script>
+    displayFacts();
+  </script>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
